2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.c: More doc tweaks

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.c: Clarify some docs

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c: Fix a stupid mistake.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* gfilemonitor.c: Fix the build.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 536160 – Add g_file_monitor()

	* gio.symbols:
	* gfile.[hc]: Add g_file_monitor which can return either
	a file or a directory monitor.  Proposed by Behdad Esfahbod

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	536733 – gio build failure on Irix

	* glocalfile.c: Use a configure check for structfs.f_bavail.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 534639 – add g_desktop_app_info_new_from_keyfile

	* gio.symbols:
	* gdesktopappinfo.[hc]: Add a function to create a
	GDesktopAppInfo from a GKeyFile. Proposed by Josselin Mouette.

2008-07-02  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gappinfo.c: Fix ulink in doc to make gtk-doc happy.

2008-07-01  Matthias Clasen  <mclasen@redhat.com>

	* gunixmounts.c: Fix a doc typo.

2008-07-01  Cody Russell  <bratsche@gnome.org>

	* gio/gcontenttype.c:
	* gio/gwin32appinfo.c:
	* gio/gwin32volumemonitor.c:
	* gio/gwin32mount.c: Fixed some include problems.

2008-07-01  Cody Russell  <bratsche@gnome.org>

	* gio/gioenums.h:
	* gio/giotypes.h:
	Moved all relevant typedefs into these files.

	* gio/*.[ch]:
	Updated wrt added files.

	Split types into separate file for easier maintainership. (#538564)

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 540331 – g_file_append_to () documentation: can return NULL

	* gfile.c (g_file_append_to): Clarify docs.
	Patch by Jared Moore

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 539090 – g_content_type_from_mime_type() should unalias
